[gd_scene load_steps=3 format=3 uid="uid://cxc6j0x8l4j1"]

[ext_resource type="Script" path="res://src/main_menu_master.gd" id="1_6udrj"]
[ext_resource type="Texture2D" uid="uid://bfiatg0f6qjsj" path="res://asset/image/bg_1.png" id="1_k1ek2"]

[node name="Main Menu Master" type="Node2D"]
script = ExtResource("1_6udrj")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_k1ek2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 212.0
offset_bottom = 300.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start
"

[node name="Records" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Records"

[node name="Cards" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cards
"

[node name="Add" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Add
"

[node name="Remove" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Remove
"

[node name="Exit" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
offset_left = 333.0
offset_top = 32.0
offset_right = 863.0
offset_bottom = 515.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer" type="BoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextEdit" type="TextEdit" parent="PanelContainer/VBoxContainer/BoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextEdit2" type="TextEdit" parent="PanelContainer/VBoxContainer/BoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Records" to="." method="_on_records_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Cards" to="." method="_on_cards_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
